mock-test/5th Sept/istio_1_26_mesh_gateway_virtualservice_lab_pack/04-source-and-gateway/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-curl
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-curl
  template:
    metadata:
      labels:
        app: frontend-curl
    spec:
      containers:
      - name: curl
        image: curlimages/curl:8.10.1
        command: ["sleep","3600"]
