mock-test/5th Sept/istio_1_26_mesh_gateway_virtualservice_lab_pack/04-source-and-gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: orders
  namespace: mesh-gateway-labs
spec:
  hosts:
  - orders.mesh-gateway-labs.svc.cluster.local
  - orders.example.test
  gateways:
  - mesh
  - edge-gateway
  http:
  - name: frontend-internal
    match:
    - gateways: ["mesh"]
      sourceNamespace: frontend
      uri:
        prefix: /orders
    headers:
      response:
        set:
          X-API-Channel: internal
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v2
  - name: internal-default
    match:
    - gateways: ["mesh"]
      uri:
        prefix: /orders
    headers:
      response:
        set:
          X-API-Channel: internal
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v1
  - name: external
    match:
    - gateways: ["edge-gateway"]
      uri:
        prefix: /orders
    headers:
      response:
        set:
          X-API-Channel: external
    route:
    - destination:
        host: backend.mesh-gateway-labs.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend
  namespace: mesh-gateway-labs
spec:
  host: backend.mesh-gateway-labs.svc.cluster.local
  subsets:
  - name: v1
    labels: {version: v1}
  - name: v2
    labels: {version: v2}
